--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-<style type="text/css" >
+/*<style type="text/css" >
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Courier}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Courier; min-height: 14.0px}
     span.s1 {font: 12.0px Monaco}
     span.Apple-tab-span {white-space:pre}
-  </style>
+  </style>*/
 
 button{ position: absolute;
     top: 50%;
