--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-/*<style type="text/css" >
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Courier}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Courier; min-height: 14.0px}
-    span.s1 {font: 12.0px Monaco}
-    span.Apple-tab-span {white-space:pre}
-  </style>*/
-
+body{
+  widht: 100%;
+}
 button{ position: absolute;
     top: 50%;
     left: 50%;
